--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -84,7 +84,7 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-                     <p align="center" >会议主席<br/></p>
+                     <p align="center" style="text-indent:2em ">会议主席<br/></p>
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 180px; height: 200px; " ></a> <br/>
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
