--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -84,8 +84,8 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-                     <p style="text-indent:2em "  >会议主席<br/></p>
-                        <p align="center"><p style="text-indent:2em "  >来学嘉教授（IACR Fellow）<br/></p>
+                     <p style="text-indent:1em "  >会议主席<br/></p>
+                        <p style="text-indent:1em "  >来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 120px; height: 150px; " ></a> <br/>
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
 <p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱 冯荣权 徐茂智 李凤华 杨义先 胡磊 戚文峰 秦志光 毛文波<br/></p>
