--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -88,7 +88,7 @@
                         <p style="text-indent:1em "  >来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 120px; height: 150px; " ></a> <br/>
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
-<p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱 冯荣权 徐茂智 李凤华 杨义先 胡磊 戚文峰 秦志光 毛文波<br/></p>
+<p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱 冯荣权 徐茂智 李凤华 杨义先 胡磊 戚文峰 秦志光<br/></p>
 <p align="center">&nbsp&nbsp&nbsp温巧燕 邢朝平 张方国 徐秋亮 马建峰 陈恭亮 马文平 谷大武 毛文波 陈利群 &nbsp&nbsp&nbsp&nbsp<br/></p> 
 <p align="center">&nbsp&nbsp伍前红 张卫明 王美琴 路荣幸 王良民  赵波  许春根  沈超  陈立全  翁健   <br/></p> 
 <p align="center">&nbsp&nbsp&nbsp&nbsp张福泰 付玉龙  徐鹏   杨侃  贾春福 陈晓峰  李进   沈剑  李小勇 李舟军 <br/></p>
