--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -89,9 +89,9 @@
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 180px; height: 200px; " ></a> <br/>
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
 <p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱&nbsp&nbsp&nbsp冯荣权&nbsp&nbsp&nbsp徐茂智&nbsp&nbsp&nbsp李凤华&nbsp&nbsp&nbsp杨义先&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp戚文峰&nbsp&nbsp&nbsp秦志光 <br/></p>
-<p align="center">&nbsp&nbsp&nbsp温巧燕 邢朝平 张方国 徐秋亮 马建峰 陈恭亮 马文平 谷大武 毛文波 陈利群 &nbsp&nbsp&nbsp&nbsp<br/></p> 
-<p align="center">&nbsp&nbsp伍前红 张卫明 王美琴 路荣幸 王良民  赵波  许春根  沈超  陈立全  翁健   <br/></p> 
-<p align="center">&nbsp&nbsp&nbsp&nbsp张福泰 付玉龙  徐鹏   杨侃  贾春福 陈晓峰  李进   沈剑  李小勇 李舟军 <br/></p>
+<p align="center">温巧燕&nbsp&nbsp&nbsp邢朝平&nbsp&nbsp&nbsp张方国&nbsp&nbsp&nbsp徐秋亮&nbsp&nbsp&nbsp马建峰&nbsp&nbsp&nbsp陈恭亮&nbsp&nbsp&nbsp马文平&nbsp&nbsp&nbsp谷大武&nbsp&nbsp&nbsp毛文波&nbsp&nbsp&nbsp陈利群<br/></p> 
+<p align="center">伍前红&nbsp&nbsp&nbsp张卫明&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp路荣幸&nbsp&nbsp&nbsp王良民&nbsp&nbsp&nbsp赵波&nbsp&nbsp&nbsp许春根&nbsp&nbsp&nbsp沈超&nbsp&nbsp&nbsp陈立全&nbsp&nbsp&nbsp翁健<br/></p> 
+<p align="center">张福泰&nbsp&nbsp&nbsp付玉龙&nbsp&nbsp&nbsp徐鹏&nbsp&nbsp&nbsp杨侃&nbsp&nbsp&nbsp贾春福&nbsp&nbsp&nbsp陈晓峰&nbsp&nbsp&nbsp李进&nbsp&nbsp&nbsp沈剑&nbsp&nbsp&nbsp李小勇&nbsp&nbsp&nbsp李舟军 <br/></p>
 
 <br/><br/>
                         
