--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -91,7 +91,7 @@
 <p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱&nbsp&nbsp&nbsp冯荣权&nbsp&nbsp&nbsp徐茂智&nbsp&nbsp&nbsp李凤华&nbsp&nbsp&nbsp杨义先&nbsp&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp&nbsp戚文峰&nbsp&nbsp&nbsp秦志光<br/></p>
 <p align="center">温巧燕&nbsp&nbsp&nbsp邢朝平&nbsp&nbsp&nbsp张方国&nbsp&nbsp&nbsp徐秋亮&nbsp&nbsp&nbsp马建峰&nbsp&nbsp&nbsp陈恭亮&nbsp&nbsp&nbsp马文平&nbsp&nbsp&nbsp谷大武&nbsp&nbsp&nbsp毛文波&nbsp&nbsp&nbsp陈利群<br/></p> 
 <p align="center">伍前红&nbsp&nbsp&nbsp张卫明&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp陆荣幸&nbsp&nbsp&nbsp王良民&nbsp&nbsp&nbsp&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp许春根&nbsp&nbsp&nbsp&nbsp&nbsp沈超&nbsp&nbsp&nbsp&nbsp&nbsp陈立全&nbsp&nbsp&nbsp&nbsp&nbsp翁健<br/></p> 
-<p align="center">张福泰&nbsp&nbsp&nbsp付玉龙&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp徐鹏&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp杨侃&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp贾春福&nbsp&nbsp&nbsp&nbsp陈晓峰&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp李进&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp沈剑&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp李小勇&nbsp&nbsp&nbsp李舟军 <br/></p>
+<p align="center">张福泰&nbsp&nbsp&nbsp付玉龙&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp徐鹏&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp杨侃&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp贾春福&nbsp&nbsp&nbsp&nbsp陈晓峰&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp李进&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp沈剑&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp李小勇&nbsp&nbsp&nbsp李舟军 <br/></p>
 
 <br/><br/>
                         
