--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -73,7 +73,7 @@
             <div id="theme">
 		    <p align="center" >网络空间安全与应用密码学国际研讨会-2020<br/></p>
 		    <p align="center" >CSAC-2020<br/></p>
-                <p style="text-indent:2em ">国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
+                <p align="center" >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
@@ -84,7 +84,7 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-                     <p style="text-indent:2em "  >会议主席<br/></p>
+                    <p align="center" >会议主席<br/></p>
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 180px; height: 200px; " ></a> <br/>
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
@@ -101,17 +101,17 @@
                         <p align="center">林聪   张兰  郭富春  查达仁  蒙威志<br/></p>  
 <p align="center">付安民  田海博  黎琳   付章杰  李剑<br/></p>
                         
-<p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
-<p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
-<p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：<br/></p>
-<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；开户行：杭州联合银行祥符支行；账号： <br/></p>
-<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp2010 0015 9260 415。缴费时请您注明以下信息：单位、姓名和单位统一<br/></p>
-<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp社会信用代码。<br/></p>
-<p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
-<p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
-<p align="left">会议承办单位：北京航空航天大学 网络空间安全学院<br/></p>
-<p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
-<p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
+<p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
+<p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
+<p align="left">会议注册费用：注册费1500元人民币/人。注册费缴纳：<br/></p>
+<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：湖南淇朗德信息科技有限公司；开户行：中国银行股份有限公司常德市皂果路支行；账号： <br/></p>
+<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp5937 7522 7413。缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/></p>
+<p align="left">会议举办地点：中国 网络视频会议。<br/></p>
+
+<p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
+<p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
+<p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>  
                     </div>
                 </div>   
             </div>    
@@ -175,24 +175,24 @@
                 <caption>注册信息</caption>
                 <tbody>
                     <tr >
-                        <td >注册费用：</td><td>2000元/人，报名参会老师和相关人员交通和食宿自理。</td>
+                        <td >注册费用：</td><td>1500元/人。</td>
                     </tr>
                     
 
                     <tr>
                         <td style="width: 41%">收款人信息如下：</td>
-                        <td>(转账时请注明：单位、姓名和单位统一社会信用代码)</td>
+                        <td>(转账时请注明：会议CSAC+参会人姓名)</td>
                     </tr>
                     <tr>
                         <td>户&nbsp; &nbsp;&nbsp;&nbsp;名：</td>
-                        <td>杭州畅游会展服务有限公司</td>
+                        <td>湖南淇朗德信息科技有限公司</td>
                     </tr>
                     <tr>
                         <td>账&nbsp; &nbsp;&nbsp;&nbsp;号：</td>
-                        <td>2010 0015 9260 415</td>
+                        <td>5937 7522 7413</td>
                     </tr>
                     <tr>
-                        <td>开户银行：</td><td>杭州联合银行祥符支行</td>
+                        <td>开户银行：</td><td>中国银行股份有限公司常德市皂果路支行</td>
                     </tr>
 <!--                     <tr>
                         <td>账 &nbsp; &nbsp;&nbsp;&nbsp; 号：</td>
@@ -202,10 +202,10 @@
                         <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，财务处会开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。<a href="https://www.wjx.top/jq/36776244.aspx">请点击进入注册</a>。</td>
                     </tr> -->
                     <tr>
-                        <td colspan="2">注：缴费时请您注明以下信息（即单位、姓名和单位统一社会信用代码）</td>
+                        <td colspan="2">注：缴费时请您注明以下信息（会议CSAC+参会人姓名）</td>
                     </tr>
                 </tbody>
-                </table>
+                <!-- </table>
                 <table class="table">
                 <caption>住宿信息</caption>
                 <tbody >
