--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -112,6 +112,8 @@
 <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
 <p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
 <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>  
+			
+			
                   </div>
                     <div id="main2" >
         <style type="text/css">
@@ -138,33 +140,52 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">注册和报道</th></tr></thead><tbody>
- <tr><td>9月27日<br>14:00 - 20:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;桂林百悦大酒店大堂</td></tr>
- <tr><td colspan="4">9月28日&nbsp;(会议地点：金鸡岭校区  10教516室)</td></tr>
+<thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">会议报到</th></tr></thead><tbody>
+ <tr><td>08月28日<br></td><td colspan="3">会议报到&nbsp;&nbsp;腾讯网络会议室</td></tr>
+ <tr><td colspan="4">08月29日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
  <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
- <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>张景中</td><td>待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:00</td><td>从功能需求到RTL</td><td>傅延增</td><td rowspan="2">刘建伟</td></tr>
- <tr><td>&nbsp;10:00- 10:40</td><td>国产密码算法软件引擎的安全挑战</td><td>林璟锵</td></tr>
+ <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
+ <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
  <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:50 - 11:30</td><td>基于PUF的可信平台模块TPM 根密钥实现方法</td><td>赵波</td><td rowspan="2">冯荣权</td></tr>
- <tr><td>11:30 - 12:10</td><td>ZUC算法FPGA优化实现</td><td>杨亚涛</td></tr>
- <tr><td colspan="4">午餐（用餐地点: 百悦酒店餐厅）</td></tr>
- <tr><td>14:00 - 14:40</td><td>High Performance and Hardware Efficient Computer Arithmetic for Post Quantum Cryptography</td><td>刘伟强</td><td rowspan="2">陈光喜</td></tr>
- <tr><td>14:40 - 15:20</td><td>基于FPGA的密码算法设计方法</td><td>邬刚</td></tr>
+ <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+ <tr><td colspan="4">午餐+休息</td></tr>
+ <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
+ <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
  <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
- <tr><td>15:40 - 16:20</td><td>基于FPGA的真随机数发生器的设计</td><td>杨博翰</td><td rowspan="2">待定</td></tr>
- <tr><td>16:20 - 17:00</td><td>《下一代可信技术：MesaTEE通用安全计算框架》</td><td>周吉文</td></tr>
- <tr><td colspan="4">晚餐（用餐地点: 百悦酒店餐厅）</td></tr>
- <tr><td colspan="4">9月29日&nbsp;(会议地点：金鸡岭校区  10教516室)</td></tr>
- <tr><td>&nbsp;8:00 - 8:40</td><td>Spectral Arithmetic: Modular Arithmetic and Architecture in Public-key Cryptography</td><td>张泽松</td><td rowspan="3">唐韶华</td></tr>
- <tr><td>&nbsp;8:40 - 9:20</td><td>SEip：片上安全根的设计和应用</td><td>樊俊峰</td></tr>
- <tr><td>&nbsp;9:20 - 10:00</td><td>硬件安全与硬件辅助系统安全</td><td>张吉良</td></tr>
- <tr><td>10:00 - 10:20</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:20 - 11:00</td><td>面向掩码型密码实现的效率优化研究</td><td>邱爽</td><td rowspan="2">待定</td></tr>
- <tr><td>11:00 - 11:40</td><td>面向白盒安全的分组密码算法SWAN设计</td><td>龚征</td></tr>
- <tr><td colspan="4">午餐（用餐地点: 百悦酒店餐厅）</td></tr>
- <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">蒋林智</td></tr>
+ <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+ <tr><td colspan="4">晚餐</td></tr>
+ <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
+ <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+ <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
+ <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+ <tr><td colspan="4">午餐+休息</td></tr>
+ <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
+ <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+ <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
+ <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+ <tr><td colspan="4">晚餐</td></tr>
+	 <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
+ <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+ <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
+ <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+ <tr><td colspan="4">午餐+休息</td></tr>
+ <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
+ <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+ <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
+ <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
+ <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+ <tr><td colspan="4">晚餐</td></tr>
 </tbody></table>
 	    </br></br>
 	<div id="register">
@@ -175,38 +196,31 @@
                 <caption>注册信息</caption>
                 <tbody>
                     <tr >
-                        <td >注册费用：</td><td>1500元/人，参会老师和相关人员交通和食宿自理。</td>
+                        <td >注册费用：</td><td>1500元/人</td>
                     </tr>
                     
 
                     <tr>
                         <td style="width: 41%">收款人信息如下：</td>
-                        <td>(转账时请注明：单位、姓名和单位统一社会信用代码)</td>
+                        <td>(转账时请注明：会议CSAC+参会人姓名)</td>
                     </tr>
                     <tr>
                         <td>户&nbsp; &nbsp;&nbsp;&nbsp;名：</td>
-                        <td>广西臻悦文化传媒有限公司</td>
+                        <td>湖南淇朗德信息科技有限公司</td>
                     </tr>
                     <tr>
-                        <td>税 &nbsp; &nbsp;&nbsp;&nbsp;号：</td>
-                        <td>6600 1109 9298 4000 10</td>
+                        <td>账 &nbsp; &nbsp;&nbsp;&nbsp;号：</td>
+                        <td>5937 7522 7413</td>
                     </tr>
                     <tr>
-                        <td>开户银行：</td><td>桂林银行股份有限公司民主路支行</td>
+                        <td>开户银行：</td><td>中国银行股份有限公司常德市皂果路支行</td>
                     </tr>
                     <tr>
-                        <td colspan="2">注：缴费时请您注明以下信息（即单位、姓名和单位统一社会信用代码）</td>
+                        <td colspan="2">注：缴费时请您注明以下信息（会议CSAC+参会人姓名）</td>
                     </tr>
                 </tbody>
                 </table>
-                <table class="table">
-                <caption>住宿信息</caption>
-                <tbody >
-                    <tr><td style="width: 50%;text-indent: 2em">论坛住宿酒店：桂林百悦大酒店（桂林市金鸡岭路 1 号）
-                    </td>
-                    </tr>
-                </tbody>
-                </table>
+                
 
                 <table class="table">
                     <caption>
