--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -103,9 +103,9 @@
                         
 <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
 <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
-<p align="left">会议注册费用：注册费1500元人民币/人。注册费缴纳：<br/></p>
-<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：湖南淇朗德信息科技有限公司；开户行：中国银行股份有限公司常德市皂果路支行；账号： <br/></p>
-<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp5937 7522 7413。缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
+<p align="left">会议注册费用：注册费1500元人民币/人。<br/></p>
+<p align="left">注册费缴纳：户名：湖南淇朗德信息科技有限公司；开户行：中国银行股份有限公司常德市皂果路支行； <br/></p>
+<p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：5937 7522 7413。缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
 <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/></p>
 <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
 
@@ -135,7 +135,15 @@
 		color: #FFF;
 		font-weight: bold;
 		text-align: center;
-		
+		center-in-center{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 	}
 </style>
 <table class="tableizer-table">
@@ -187,6 +195,8 @@
  <tr><td colspan="4">晚餐</td></tr>
 </tbody></table>
 	    </br></br>
+		
+		
 	<div id="register">
            </div> 
            <div class="main2">
