--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -135,6 +135,7 @@
 		color: #FFF;
 		font-weight: bold;
 		text-align: center;
+	}
 		center-in-center{
             position: absolute;
             top: 50%;
@@ -144,7 +145,7 @@
             -ms-transform: translate(-50%, -50%);
             -o-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-	}
+        }
 </style>
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">会议报到</th></tr></thead><tbody>
@@ -233,9 +234,9 @@
 
                 <table class="table">
                     <caption>
-                            论坛赞助合作联系</caption>
+                            会议赞助与合作</caption>
                     <tbody >
-                        <tr><td style="width:50%";text-indent:2em">蒋林智:Email:linzjiang#hotmail dot com
+                        <tr><td style="width:50%";text-indent:2em">联系人：蒋林智 linzjiang(@)hotmail(dot)com
 			</td>
                         </tr>
                     </tbody>
