--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -117,7 +117,7 @@
         <style type="text/css">
 	table.tableizer-table {
 		font-size: 20px;
-		border: 1px solid #CCC; 
+		border: 1px solid #CCC; {text-align: center;} table {margin: auto;}
 		font-family: Arial, Helvetica, sans-serif;
 	} 
 	.tableizer-table td {
