--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -86,7 +86,7 @@
                     <div id="contents">
                     <p align="center" >会议主席<br/></p>
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
-                        <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 180px; height: 200px; " ></a> <br/>
+                        <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
 <p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱&nbsp&nbsp&nbsp冯荣权&nbsp&nbsp&nbsp徐茂智&nbsp&nbsp&nbsp李凤华&nbsp&nbsp&nbsp杨义先&nbsp&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp&nbsp戚文峰&nbsp&nbsp&nbsp秦志光<br/></p>
 <p align="center">温巧燕&nbsp&nbsp&nbsp邢朝平&nbsp&nbsp&nbsp张方国&nbsp&nbsp&nbsp徐秋亮&nbsp&nbsp&nbsp马建峰&nbsp&nbsp&nbsp陈恭亮&nbsp&nbsp&nbsp马文平&nbsp&nbsp&nbsp谷大武&nbsp&nbsp&nbsp毛文波&nbsp&nbsp&nbsp陈利群<br/></p> 
@@ -112,12 +112,12 @@
 <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
 <p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
 <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p>  	
-     </div>
+                    </div>
                     <div id="main2" >
         <style type="text/css">
 	table.tableizer-table {
 		font-size: 20px;
-		border: 1px solid #CCC; {text-align: center;} table {margin: auto;}
+		border: 1px solid #CCC; 
 		font-family: Arial, Helvetica, sans-serif;
 	} 
 	.tableizer-table td {
