--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -81,7 +81,7 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-			    p align="center" >会议主席<br/></p>
+			    <p align="center" >会议主席<br/></p>
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
@@ -108,8 +108,7 @@
 <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
 <p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
 <p align="left">会议报告地点：腾讯会议网络会议室。<br/></p> 
-		    
-	           <div id="schedule">	    
+		     
                     </div>
                     <div id="main2" >
         <style type="text/css">
