--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="introduction.css"/>
+    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
@@ -82,7 +82,7 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents" style="margin-top: -60px;">
-			            <p align="center" >会议主席<br/></p>
+			            <p align="center" class="organization">会议主席<br/></p>
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
@@ -95,7 +95,7 @@
 <!--                        蒋林智（University of Surrey）林璟锵 张正<br/><br/>-->
                         <p align="center">蒋林智（University of Surrey）林璟锵 张正<br/></p>
                         <br/>
-                        <p align="center">会议程序委员会<br/></p>
+                        <p align="center" class="organization">会议程序委员会<br/></p>
                         <p align="center">林聪   张兰  郭富春  查达仁  蒙威志<br/></p>  
                         <p align="center">付安民  田海博  黎琳   付章杰  李剑<br/></p>
                         <br/>
@@ -196,7 +196,7 @@
                                             <td >注册费用：</td><td>1500元/人</td>
                                         </tr>
                                         <tr>
-                                            <td style="width: 41%">收款人信息如下：</td>
+                                            <td style="width: 32%">收款人信息如下：</td>
                                             <td>(转账时请注明：会议CSAC+参会人姓名)</td>
                                         </tr>
                                         <tr>
