--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -87,9 +87,9 @@
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
                         <p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱&nbsp&nbsp&nbsp冯荣权&nbsp&nbsp&nbsp徐茂智&nbsp&nbsp&nbsp李凤华&nbsp&nbsp&nbsp杨义先&nbsp&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp&nbsp戚文峰&nbsp&nbsp&nbsp秦志光<br/></p>
-                        <p align="center">温巧燕&nbsp&nbsp&nbsp邢朝平&nbsp&nbsp&nbsp张方国&nbsp&nbsp&nbsp徐秋亮&nbsp&nbsp&nbsp马建峰&nbsp&nbsp&nbsp陈恭亮&nbsp&nbsp&nbsp马文平&nbsp&nbsp&nbsp谷大武&nbsp&nbsp&nbsp毛文波&nbsp&nbsp&nbsp陈利群<br/></p>
-                        <p align="center">伍前红&nbsp&nbsp&nbsp张卫明&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp陆荣幸&nbsp&nbsp&nbsp王良民&nbsp&nbsp&nbsp&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp许春根&nbsp&nbsp&nbsp&nbsp&nbsp沈超&nbsp&nbsp&nbsp&nbsp&nbsp陈立全&nbsp&nbsp&nbsp&nbsp&nbsp翁健<br/></p>
-                        <p align="center">&nbsp&nbsp张福泰&nbsp&nbsp&nbsp付玉龙&nbsp&nbsp&nbsp&nbsp&nbsp徐鹏&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp杨侃&nbsp&nbsp&nbsp&nbsp贾春福&nbsp&nbsp&nbsp&nbsp陈晓峰&nbsp&nbsp&nbsp&nbsp&nbsp李进&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp沈剑&nbsp&nbsp&nbsp&nbsp&nbsp李小勇&nbsp&nbsp&nbsp李舟军 <br/></p>
+                        <p align="center">温巧燕&nbsp&nbsp&nbsp邢朝平&nbsp&nbsp&nbsp张方国&nbsp&nbsp&nbsp徐秋亮&nbsp&nbsp&nbsp马建峰&nbsp&nbsp&nbsp陈恭亮&nbsp&nbsp&nbsp马文平&nbsp&nbsp&nbsp&nbsp谷大武&nbsp&nbsp&nbsp毛文波&nbsp&nbsp&nbsp陈利群<br/></p>
+                        <p align="center">伍前红&nbsp&nbsp&nbsp张卫明&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp陆荣幸&nbsp&nbsp&nbsp王良民&nbsp&nbsp&nbsp&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp许春根&nbsp&nbsp&nbsp&nbsp&nbsp沈超&nbsp&nbsp&nbsp&nbsp&nbsp陈立全&nbsp&nbsp&nbsp&nbsp&nbsp翁健&nbsp&nbsp<br/></p>
+                        <p align="center">张福泰&nbsp&nbsp&nbsp付玉龙&nbsp&nbsp&nbsp&nbsp&nbsp徐鹏&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp杨侃&nbsp&nbsp&nbsp&nbsp&nbsp贾春福&nbsp&nbsp&nbsp陈晓峰&nbsp&nbsp&nbsp&nbsp&nbsp李进&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp沈剑&nbsp&nbsp&nbsp&nbsp&nbsp李小勇&nbsp&nbsp&nbsp李舟军<br/></p>
                         <br/><br/>
                         <p class="organization">论坛程序委员会主席<br/></p>
 <!--                        蒋林智（University of Surrey）林璟锵 张正<br/><br/>-->
@@ -102,10 +102,10 @@
                         <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                         <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
                         <p align="left">会议注册费用：注册费1500元人民币/人。<br/></p>
-                        <p align="left">注册费缴纳：户名：湖南淇朗德信息科技有限公司； <br/></p>
-                                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
-                        <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：5937 7522 7413。缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
-                        <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br/></p>
+                        <p align="left">注册费缴纳：&nbsp&nbsp&nbsp&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
+                        <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
+                        <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：5937 7522 7413。<br/></p>
+                        <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
                         <p align="left">会议举办地点：中国 网络视频会议。<br/></p>
                         <p align="left">会议承办单位：DFSC信息研发中心 University ofSurrey SSG<br/></p>
                         <p align="left">会议协办单位：金陵科技学院 网络空间安全学院。<br/></p>
