--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -218,13 +218,13 @@
                                 <table class="table" style="margin-top: -20px;">
                                     <caption style="font-size: 20px;">住宿信息</caption>
                                     <tbody >
-                                        <tr><td style="width: 50%;text-indent: 2em;font-size: 22px;">论坛住宿酒店：网络会议</td></tr>
+                                        <tr ><td style="font-size: 22px;">论坛住宿酒店：网络会议</td></tr>
                                     </tbody>
                                 </table>
                                 <table class="table" style="margin-top: -20px;">
                                     <caption style="font-size: 20px;">会议赞助与合作：</caption>
                                     <tbody >
-                                        <tr><td style="width:50%;text-indent:2em;font-size: 20px;">蒋林智; linzjiang(@)hotmail(dot)com</td></tr>
+                                        <tr><td style="font-size: 20px;">蒋林智; linzjiang(@)hotmail(dot)com</td></tr>
                                     </tbody>
                                 </table>
                             </div>
