--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -9,13 +9,13 @@
     <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     -->
-    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/2.1.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="https://unpkg.com/scrollreveal"></script>
+<!--    <script src="https://unpkg.com/scrollreveal"></script>-->
     <title>CSAC-2020</title>
 </head>
 
@@ -72,21 +72,21 @@
                 <p style="text-align: center;font-size: 22px" >网络空间安全与应用密码学国际研讨会-2020<br/></p>
 		        <p style="text-align: center;text-indent:2em;font-size: 22px; " >CSAC-2020<br/></p>
                     <hr/>
-                <p style="text-indent:2em; font-size: 20px; " >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
+                <p style="text-indent:2em; font-size: 20px; font-family: 宋体; " >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
+                    &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div> 
             </div>
-            <div id="speaker"></div>
             <div class="main2">
                 <div id="main2">
-                    <div id="contents" style="margin-top: -60px;">
+                    <div id="contents">
 			            <p align="center" class="organization">会议主席<br/></p>
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
-                        <p align="center">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱&nbsp&nbsp&nbsp冯荣权&nbsp&nbsp&nbsp徐茂智&nbsp&nbsp&nbsp李凤华&nbsp&nbsp&nbsp杨义先&nbsp&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp&nbsp戚文峰&nbsp&nbsp&nbsp秦志光<br/></p>
+                        <p align="center" class="teacher">陈克非&nbsp&nbsp&nbsp吴文玲&nbsp&nbsp&nbsp林东岱&nbsp&nbsp&nbsp冯荣权&nbsp&nbsp&nbsp徐茂智&nbsp&nbsp&nbsp李凤华&nbsp&nbsp&nbsp杨义先&nbsp&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp&nbsp戚文峰&nbsp&nbsp&nbsp秦志光<br/></p>
+
                         <p align="center">温巧燕&nbsp&nbsp&nbsp邢朝平&nbsp&nbsp&nbsp张方国&nbsp&nbsp&nbsp徐秋亮&nbsp&nbsp&nbsp马建峰&nbsp&nbsp&nbsp陈恭亮&nbsp&nbsp&nbsp马文平&nbsp&nbsp&nbsp&nbsp谷大武&nbsp&nbsp&nbsp毛文波&nbsp&nbsp&nbsp陈利群<br/></p>
                         <p align="center">伍前红&nbsp&nbsp&nbsp张卫明&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp陆荣幸&nbsp&nbsp&nbsp王良民&nbsp&nbsp&nbsp&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp许春根&nbsp&nbsp&nbsp&nbsp&nbsp沈超&nbsp&nbsp&nbsp&nbsp&nbsp陈立全&nbsp&nbsp&nbsp&nbsp&nbsp翁健&nbsp&nbsp<br/></p>
                         <p align="center">张福泰&nbsp&nbsp&nbsp付玉龙&nbsp&nbsp&nbsp&nbsp&nbsp徐鹏&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp杨侃&nbsp&nbsp&nbsp&nbsp&nbsp贾春福&nbsp&nbsp&nbsp陈晓峰&nbsp&nbsp&nbsp&nbsp&nbsp李进&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp沈剑&nbsp&nbsp&nbsp&nbsp&nbsp李小勇&nbsp&nbsp&nbsp李舟军<br/></p>
